[package]
name = "elm-parser"
version = "1.4.7"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/"
readme = "README.md"
homepage = "https://littel-bo-peep-leptos-v2.fly.io/"
repository = "https://github.com/Devland-agancy/Elm-markup-to-leptos"
description = "Elm markup parser to leptos"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]


[dependencies]
quote = "1.0"
syn = "2.0"
leptos = { version = "0.4", features = ["csr"] }
proc-macro2 = "1.0.69"
regex = "1.10.0"
nom = "7.1.3"
cps = "0.2.3"
